Fix Bug #53963, error code isn't always set in certain error cases.